<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".Lobby">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appTitleTextV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/app_name_tv"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/devTextV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:paddingStart="4dp"
                android:text="@string/developer_tv"
                android:textAlignment="textStart"
                android:textColor="#807575"
                android:textSize="10sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/dniEditT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/identification_hint"
            android:inputType="textPersonName"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nameEditT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/surnameEditT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/surname_hint"
            android:inputType="textPersonName"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genterTextV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/gender_tv"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/locationTextV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/locality_tv"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/gendertButtonG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="144dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/male_rb"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/female_rb"
                    android:textColor="#000000"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/other_rb"
                    android:textColor="#000000"
                    android:textSize="13sp" />
            </RadioGroup>

            <Spinner
                android:id="@+id/locationSpinner"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <CheckBox
            android:id="@+id/residentCheckB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="@string/resident_cb"
            android:textColor="#000000" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#009688"
            android:fontFamily="@font/roboto_light"
            android:text="@string/confirm_button"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>