<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".AboutMe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appNameTextV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/app_name_tv"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/versionTextV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:paddingEnd="60dp"
            android:text="@string/app_version_tv"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/developerTextV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:paddingStart="60dp"
            android:text="@string/developer_tv"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </LinearLayout>
</FrameLayout>